--- a/Frontened Practice/Bootstrap/component/card.html
+++ b/Frontened Practice/Bootstrap/component/card.html
@@ -28,7 +28,7 @@
       </div>
     </div> -->
 
-    <div class="container my-5">
+    <div class="container ">
       <div class="row my-5">
         <div class="col-3">
           <div class="card">
