--- a/Frontened Practice/CSS/part-2/pxStyle.css
+++ b/Frontened Practice/CSS/part-2/pxStyle.css
@@ -14,13 +14,13 @@ html {
 
 .pimg2 {
   background-image: url("https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8ZGVza3RvcCUyMHdhbGxwYXBlcnN8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
-  min-height: 500px;
+  min-height: 100%;
   background-size: cover;
 }
 .pimg3 {
   background-image: url("https://images.unsplash.com/photo-1504805572947-34fad45aed93?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fGRlc2t0b3AlMjB3YWxscGFwZXJzfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60");
-  min-height: 500px;
-
+  min-height: 100%;
+  background-size: cover;
 }
 
 .section{
@@ -47,10 +47,6 @@ html {
 .pimg1,.pimg2,.pimg3{
     position: relative;
     background-attachment: fixed;
-}
-.pimg3 .ptext{
-    
-    color: beige;
 }
 
 .border{
